--- a/style.css
+++ b/style.css
@@ -359,103 +359,95 @@ header ul li a{
 
 }
 /* his comrades info */
-.containerc{
-  position: relative;
-  display: flex;
-  left: 100px;
-}
-.containerc .cardc{
-  position: relative;
-  width: 320px;
-  height: 450px;
-  background: #232323;
-  border-radius: 20px;
-  overflow: hidden;
-}
-.containerc .cardc::before{
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #9bdc28;
-  clip-path: circle( 150px at 80% 20%);
-  transition: 0.5s ease-in-out;
-}
-.containerc .cardc:hover::before{
-  clip-path: circle(300px at 80% -20px);
-  
-}
-.containerc .cardc::after{
-  content: "Nike";
-  position: absolute;
-  top: 30%;
-  left: -20px;
-  font-size: 12em;
-  font-weight: 800;
-  font-style: italic;
-  color: rgba(255, 255, 255, 0.04);
-}
-.containerc .cardc .imgBxc{
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50px);
-  z-index: 10000;
-  width: 100%;
-  height: 200px;
-  transition: 0.5s;
-}
-.containerc .cardc:hover .imgBxc{
-  top: 0%;
-  transform: translate(0%);
-}
-.containerc .cardc .imgBxc img{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(-25deg);
-  width: 270px;
-}
-.containerc .cardc .contentc{
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 100px;
-  text-align: center;
-  transition: 1s;
-  z-index: 10;
-}
-.containerc .cardc:hover .contentc{
-  height: 210px;
-}
-.containerc .cardc .contentc h2{
-  position: relative;
-  font-weight: 600;
-  letter-spacing: 1px;
-  color: white;
-}
-.containerc .cardc .contentc .size{
+.containerk2{
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 8px 20px;
-  transition: 0.5s;
-  opacity: 0;
-  visibility: hidden;
+  max-width: 1200px;
+  flex-wrap: wrap;
+  padding: 40px 0;
 }
-.containerc .cardc:hover .contentc .size{
-  opacity: 1;
-  visibility: visible;
+.containerk2 .cardk2{
+  position: relative;
+  width: 320px;
+  height: 440px;
+  box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.05),
+              inset -5px -5px 5px rgba(255, 255, 255, 0.5),
+              5px 5px 5px rgba(0, 0, 0, 0.05),
+              -5px -5px 5px rgba(255, 255, 255, 0.5);
+  border-radius: 15px;
+  margin: 30px;
+}
+.containerk2 .cardk2 .boxk2{
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  right: 20px;
+  bottom: 20px;
+  background: #ebf5fc;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s;
+}
+.containerk2 .cardk2:hover .boxk2{
+  transform: translateY(-50px);
+  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+}
+.containerk2 .cardk2:hover:nth-child(1) .boxk2{
+  background: #45f3ff;
+}
+.containerk2 .cardk2:hover:nth-child(2) .boxk2{
+  background: red;
+}
+.containerk2 .cardk2:hover:nth-child(3) .boxk2{
+  background: orange;
+}
+.containerk2 .cardk2 .boxk2 .contentk2{
+  padding: 20px;
+  text-align: center;
+}
+.containerk2 .cardk2:hover .boxk2 .contentk2 h3,
+.containerk2 .cardk2:hover .boxk2 .contentk2 p
+{
+  color: white;
+}
+.containerk2 .cardk2 .boxk2 .contentk2 h2{
+  position: absolute;
+  top: -10px;
+  right: 30px;
+  font-size: 8em;
+  color: rgba(0, 0, 0, 0.02);
+  transition: 0.5s;
+  pointer-events: none;
+}
+.containerk2 .cardk2:hover .boxk2 .contentk2 h2{
+  color: rgba(0, 0, 0, 0.05);
+}
+.containerk2 .cardk2 .boxk2 .contentk2 h3{
+  font-size: 1.8em;
+  color: #777;
+  z-index: 1;
+  transition: 0.5s;
+}
+.containerk2 .cardk2 .boxk2 .contentk2 p{
+  font-size: 1em;
+  font-weight: 300;
+  color: #777;
+  z-index: 1;
+  transition: 0.5s;
 }
 .nike{
   display: flex;
   justify-content: center;
   align-items: center;
+  max-width: 1500px;
   flex-wrap: wrap;
-  transform-style: preserve-3d;
-  width: 1100px;
-
+  padding: 40px 0;
+  background: white;
 }
 /* his comrades info */
 /* his comrades end */
